@@ -170,7 +170,7 @@
 
 #main_head_tail_settings
 		<td class="settings_toggle">
-			<a href="#" onclick="$('#settings').toggle();" class="settings_link">
+			<a href="http://d-portal.org/faq.html" class="settings_faq">FAQ</a><a href="#" onclick="$('#settings').toggle();" class="settings_link">
 				<span>{change_settings_text}</span><img src="{flava}settings.png" width="35" height="35"/>
 			</a>
 		</td>
